config_files/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: jenkins-project
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: 'true'

spec:
  tls:
  - hosts:
    - jenkins.etc.com
    secretName: jenkins-ingress-ssl
  rules:
  - host: jenkins.etc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
